syntax = "proto3";
option go_package = "github.com/djpiper28/rpg-book/desktop_client/backend/pb_project_character";

message ChracterHandle {
  string id = 1;
}

message BasicCharacterDetails {
  ChracterHandle handle = 1;
  string name = 2;
}
