syntax = "proto3";
option go_package = "github.com/djpiper28/rpg-book/desktop_client/backend/pb_settings";
import 'common.proto';

service SettingsSvc {
  rpc GetSettings(Empty) returns (Settings) {}
}

message Settings {

}
